2001-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (CONF_DISTFILES): Remove config.h.bot from the list.

2001-04-19  David Livings <david.livings@asa.co.uk>

	* Makeconf.in (mk-libdir-link): Omit check for $(octlibdir)/octave
	existing as a directory.

2001-02-28  Albert Chin-A-Young  <china@thewrittenword.com>

	* configure.in: Check for getpwnam in libsun only after checking
	default libraries first.  Check for gethostname in libsocket only
	after checking default libraries first.	

2001-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Allow for using f2c when setting functions to look
	for in the BLAS and Lapack libraries.
	From Kurt Hornik <Kurt.Hornik@ci.tuwien.ac.at>.

2001-02-10  Mumit Khan  <khan@nanotech.wisc.edu>

	* test/octave.test/string/dec2hex-1.m: Don't assume hex format
	produces lower case letters.

2001-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* acconfig.h: Merge contents of config.h.bot.
	* config.h.bot: Delete.

	* autogen.sh: Allow running of autoconf or autoheader to be skipped.

2001-02-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* readline: Update to new version (4.2-beta1).

2001-02-05  Mumit Khan  <khan@nanotech.wisc.edu>

	* configure.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): New variables.
	* Makeconf.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): Likewise.
	
	* configure.in (XTRA_CXXFLAGS): Use -fno-implicit templates for
	pre-gcc3 compilers. Remove -fno-rtti and -fno-exceptions.
	(DEPEND_FLAGS, DEPEND_EXTRA_SED_PATTERN): New macros.
	(BLAS_LIBS): Fix test for sunperf library on Sun Solaris.
	(CPICFLAG, CXXPICFLAG, FPICFLAG, SH_LDFLAGS, RLD_FLAG): Add Sun
	compiler support.
	* Makefile.in (DEPEND_FLAGS, DEPEND_EXTRA_SED_PATTERN): New
	variables.
	(%.d : %.cc): Use.
	(%.d : %.c): Likewise.
	* acconfig.h (CXX_ISO_COMPLIANT_LIBRARY): Add #undef.

2001-01-31  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makeconf.in (%.d : %.cc): Strip the directory portion of the
	target.
	(%.d : %.c): Likewise.
