@@ -1,0 +1,2 @@
+eval ("eval (\"clear a; a;\", \"error (strcat (\\\"rethrow: \\\", __error_text__));\");",
+      "__error_text__");
