@@ -1,0 +1,2 @@
+eval ("clear a; a; 1", "");
+2
