@@ -1,0 +1,2 @@
+eval ("clear a; a;", "__error_text__");
+__error_text__
