@@ -1,0 +1,2 @@
+eval ("error (\"user-defined error\");", "__error_text__");
+__error_text__
