@@ -1,0 +1,2 @@
+eval ("eval (\"clear a; a;\", \"__error_text__\"); clear b; b;",
+      "__error_text__");
