@@ -1,0 +1,5 @@
+try
+catch
+  1
+end_try_catch
+2
