@@ -1,0 +1,6 @@
+try
+  clear a
+  a;
+catch
+end_try_catch
+1
