@@ -1,0 +1,7 @@
+try
+  clear a;
+  a;
+catch
+  __error_text__
+end_try_catch
+__error_text__
