@@ -1,0 +1,5 @@
+try
+  error ("user-defined error")
+catch
+  __error_text__
+end_try_catch
