@@ -1,0 +1,12 @@
+try
+  try
+    clear a
+    a;
+  catch
+    __error_text__
+  end_try_catch
+  clear b
+  b;
+catch
+  __error_text__
+end_try_catch
