@@ -1,3 +1,7 @@
+2001-04-24  Christoph Spiel <cspiel@hammersmith-consulting.com>
+
+	* Makefile.in (check): Allow user to specify which .exp file to run.
+
 2000-06-07  Ben Sapp <bsapp@nua.lampf.lanl.gov>
 
 	* octave.test/quad/quad-1.m: Use absolute value of difference
